--- a/AngularJS Cart/cart.html
+++ b/AngularJS Cart/cart.html
@@ -9,7 +9,7 @@
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
 
-        <title>AngularJS Presentation</title>
+        <title>AngularJS Shopping Cart</title>
     </head>
   
     <body class="container" ng-controller="myController">
